src/sass/components/playlist.scss
@use "../variables" as *;

#generatedPlaylist {
    display: grid;
    place-items: center;
    width: clamp(20rem, 80vw, 100rem);
    margin: 2rem auto;
    min-height: 100vh;

    .playlist {
        width: 100%;
        height: 100%;

        &__header {
            display: grid;
            grid-template-columns: minmax(7rem, 12rem) 1fr max-content;
            align-items: end;
            gap: 1rem;

            .albumCover {
                width: 100%;
                aspect-ratio: 1/1;
            }

            &__info {
                font-size: clamp(1rem, 2vw, 3rem);
                line-height: 1.25;

                h2 {
                    font-size: 3em;
                }

                p {
                    color: $lightgrey;
                }
            }

            .button {
                align-self: center;
                width: max-content;
            }

            @media (max-width: 800px) {
                grid-template-columns: minmax(7rem, 12rem) 1fr;

                img {
                    grid-row: span 2;
                }
            }
        }

        &__table {
            max-width: 100vw;

            width: 100%;
            text-align: left;
            margin: 1rem 0;
            border-collapse: collapse;
            color: $lightgrey;

            thead {
                border-bottom: 2px solid $darkgrey;

                img {
                    width: 1.5em;
                    aspect-ratio: 1/1;
                    margin-block: -0.5rem;
                }

                th:nth-of-type(1) {
                    width: 2em;
                }
            }

            th,
            td {
                padding: 0.5rem 1rem;
            }

            .title-cell {
                display: grid;
                grid-template-columns: 2em minmax(0, 1fr);
                align-items: center;
                gap: 0.5rem;
                font-size: 1.2em;

                .song-info {
                    line-height: 1;

                    h4 {
                        color: $white;
                        white-space: nowrap;
                        text-overflow: ellipsis;
                        overflow: hidden;
                    }

                    p {
                        font-size: 0.8em;
                    }
                }
            }

            @media (max-width: 800px) {
                th:nth-child(3),
                th:nth-child(4),
                td:nth-child(3),
                td:nth-child(4) {
                    display: none;
                }
            }
        }
    }
}

